Move layers components to CNTK

--- a/Tutorials/CNTK_208_ReasoNet.ipynb
+++ b/Tutorials/CNTK_208_ReasoNet.ipynb
@@ -79,11 +79,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All necessary data are downloaded to ../Examples/LanguageUnderstanding/ReasoNet/Data\n"
+     ]
+    }
+   ],
    "source": [
     "import io\n",
     "import os\n",
@@ -138,9 +146,9 @@
     "  return (os.path.isfile(src) and os.path.exists(src))\n",
     "\n",
     "data_path = \"../Examples/LanguageUnderstanding/ReasoNet/Data\"\n",
-    "raw_train_data=os.path.join(data_path, \"training.txt\")\n",
-    "raw_test_data=os.path.join(data_path, \"test.txt\")\n",
-    "raw_validation_data=os.path.join(data_path, \"validation.txt\")\n",
+    "raw_train_data=os.path.join(data_path, \"cnn/training.txt\")\n",
+    "raw_test_data=os.path.join(data_path, \"cnn/test.txt\")\n",
+    "raw_validation_data=os.path.join(data_path, \"cnn/validation.txt\")\n",
     "if not (file_exists(raw_train_data) and file_exists(raw_test_data) and file_exists(raw_validation_data)):\n",
     "  download_cnn(data_path)\n",
     "\n",
@@ -199,11 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training data conversion finished.\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -461,10 +477,10 @@
     "    print()\n",
     "    print(\"Finished to build corpus from {0}\".format(corpus))\n",
     "  \n",
-    "vocab_path=os.path.join(data_path, \"cnn.vocab\")\n",
-    "train_ctf=os.path.join(data_path, \"training.ctf\")\n",
-    "test_ctf=os.path.join(data_path, \"test.ctf\")\n",
-    "validation_ctf=os.path.join(data_path, \"validation.ctf\")\n",
+    "vocab_path=os.path.join(data_path, \"cnn/cnn.vocab\")\n",
+    "train_ctf=os.path.join(data_path, \"cnn/training.ctf\")\n",
+    "test_ctf=os.path.join(data_path, \"cnn/test.ctf\")\n",
+    "validation_ctf=os.path.join(data_path, \"cnn/validation.ctf\")\n",
     "vocab_size=101000\n",
     "if not (file_exists(train_ctf) and file_exists(test_ctf) and file_exists(validation_ctf)):\n",
     "  entity_vocab, word_vocab = Vocabulary.build_vocab(raw_train_data, vocab_path, vocab_size)\n",
@@ -483,19 +499,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import sys\n",
+    "from datetime import datetime\n",
+    "import numpy as np\n",
+    "import cntk\n",
+    "from cntk import Trainer, Axis, device, combine\n",
+    "from cntk.layers.blocks import Stabilizer, _initializer_for,  _INFERRED, Parameter, Placeholder, GRU\n",
+    "from cntk.layers import Recurrence, Convolution\n",
+    "from cntk.ops import input_variable, cross_entropy_with_softmax, classification_error, sequence, reduce_sum, \\\n",
+    "    parameter, times, element_times, past_value, plus, placeholder_variable, reshape, constant, sigmoid, convolution, tanh, times_transpose, greater, cosine_distance, element_divide, element_select, exp, future_value, past_value\n",
+    "from cntk.internal import _as_tuple, sanitize_input\n",
+    "from cntk.initializer import uniform, glorot_uniform\n",
     "from cntk.io import MinibatchSource, CTFDeserializer, StreamDef, StreamDefs, INFINITELY_REPEAT, DEFAULT_RANDOMIZATION_WINDOW\n",
     "import cntk.ops as ops\n",
-    "from cntk.layers.blocks import _INFERRED, Parameter\n",
-    "from cntk.internal import _as_tuple, sanitize_input\n",
-    "import cntk.learner as learner\n",
-    "\n",
+    "import cntk.learners as learners\n",
     "# Check for an environment variable defined in CNTK's test infrastructure\n",
     "envvar = 'CNTK_EXTERNAL_TESTDATA_SOURCE_DIRECTORY'\n",
     "def is_test(): return envvar in os.environ\n",
@@ -529,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -577,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -636,94 +670,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "import os\n",
-    "from datetime import datetime\n",
-    "import numpy as np\n",
-    "from cntk import Trainer, Axis, device, combine\n",
-    "from cntk.layers.blocks import Stabilizer, _initializer_for,  _INFERRED, Parameter, Placeholder\n",
-    "from cntk.layers import Recurrence, Convolution\n",
-    "from cntk.ops import input_variable, cross_entropy_with_softmax, classification_error, sequence, reduce_sum, \\\n",
-    "    parameter, times, element_times, past_value, plus, placeholder_variable, reshape, constant, sigmoid, convolution, tanh, times_transpose, greater, cosine_distance, element_divide, element_select, exp, future_value, past_value\n",
-    "from cntk.internal import _as_tuple, sanitize_input\n",
-    "from cntk.initializer import uniform, glorot_uniform\n",
-    "\n",
-    "def gru_cell(shape, init=glorot_uniform(), name=''): # (x, (h,c))\n",
-    "  \"\"\" GRU cell function\n",
-    "  \"\"\"\n",
-    "  shape = _as_tuple(shape)\n",
-    "\n",
-    "  if len(shape) != 1 :\n",
-    "    raise ValueError(\"gru_cell: shape must be vectors (rank-1 tensors)\")\n",
-    "\n",
-    "  # determine stacking dimensions\n",
-    "  cell_shape_stacked = shape * 2  # patched dims with stack_axis duplicated 2 times\n",
-    "\n",
-    "  # parameters\n",
-    "  Wz = Parameter(cell_shape_stacked, init = init, name='Wz')\n",
-    "  Wr = Parameter(cell_shape_stacked, init = init, name='Wr')\n",
-    "  Wh = Parameter(cell_shape_stacked, init = init, name='Wh')\n",
-    "  Uz = Parameter(_INFERRED + shape, init = init, name = 'Uz')\n",
-    "  Ur = Parameter(_INFERRED + shape, init = init, name = 'Ur')\n",
-    "  Uh = Parameter(_INFERRED + shape, init = init, name = 'Uh')\n",
-    "\n",
-    "  def create_s_placeholder():\n",
-    "    # we pass the known dimensions here, which makes dimension inference easier\n",
-    "    return Placeholder(shape=shape, name='S') # (h, c)\n",
-    "\n",
-    "  # parameters to model function\n",
-    "  x = Placeholder(name='gru_block_arg')\n",
-    "  prev_status = create_s_placeholder()\n",
-    "\n",
-    "  # formula of model function\n",
-    "  Sn_1 = prev_status\n",
-    "\n",
-    "  z = sigmoid(times(x, Uz, name='x*Uz') + times(Sn_1, Wz, name='Sprev*Wz'), name='z')\n",
-    "  r = sigmoid(times(x, Ur, name='x*Ur') + times(Sn_1, Wr, name='Sprev*Wr'), name='r')\n",
-    "  h = tanh(times(x, Uh, name='x*Uh') + times(element_times(Sn_1, r, name='Sprev*r'), Wh), name='h')\n",
-    "  s = plus(element_times((1-z), h, name='(1-z)*h'), element_times(z, Sn_1, name='z*SPrev'), name=name)\n",
-    "  apply_x_s = combine([s])\n",
-    "  apply_x_s.create_placeholder = create_s_placeholder\n",
-    "  return apply_x_s\n",
-    "\n",
-    "def seq_max(x, broadcast=True, name=''):\n",
-    "  \"\"\"\n",
-    "  Get the max value in the sequence values\n",
-    "\n",
-    "  Args:\n",
-    "    x: input sequence\n",
-    "    broadcast: if broadcast is True, the max value will be broadcast along with the input sequence,\n",
-    "    else only a single value will be returned\n",
-    "    name: the name of the operator\n",
-    "  \"\"\"\n",
-    "  m = placeholder_variable(shape=(1,), dynamic_axes = x.dynamic_axes, name='max')\n",
-    "  o = element_select(greater(x, future_value(m)), x, future_value(m))\n",
-    "  rlt = o.replace_placeholders({m:sanitize_input(o)})\n",
-    "  if broadcast:\n",
-    "    pv = placeholder_variable(shape=(1,), dynamic_axes = x.dynamic_axes, name='max_seq')\n",
-    "    max_seq = element_select(sequence.is_first(x), sanitize_input(rlt), past_value(pv))\n",
-    "    max_out = max_seq.replace_placeholders({pv:sanitize_input(max_seq)})\n",
-    "  else:\n",
-    "    max_out = sequence.first(rlt)\n",
-    "  return sanitize_input(max_out)\n",
-    "\n",
-    "def seq_softmax(x, name = ''):\n",
-    "  \"\"\"\n",
-    "  Compute softmax along with a squence values\n",
-    "  \"\"\"\n",
-    "  x_exp = exp((x-seq_max(x))*10)\n",
-    "  x_softmax = element_divide(x_exp, sequence.broadcast_as(sequence.reduce_sum(x_exp), x), name = name)\n",
-    "  return x_softmax"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -737,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -764,7 +710,7 @@
     "  projected_status = times(status, Wi, name = 'projected_status')\n",
     "  projected_memory = times(memory, Wm, name = 'projected_memory')\n",
     "  sim = cosine_similarity(projected_status, projected_memory, name= name+ '_sim')\n",
-    "  return seq_softmax(sim, name = name)"
+    "  return sequence.softmax(sim, name = name)"
    ]
   },
   {
@@ -781,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -805,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -836,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -853,7 +799,7 @@
     "    att_dim: The dimention of attention\n",
     "    max_step: Maxuim number of step to revisit the context memory\n",
     "  \"\"\"\n",
-    "  gru = gru_cell((hidden_dim*2, ), name='control_status')\n",
+    "  gru = GRU((hidden_dim*2, ), name='control_status')\n",
     "  status = init_status\n",
     "  output = [None]*max_steps*2\n",
     "  sum_prob = None\n",
@@ -868,7 +814,7 @@
     "    context_attention = sequence.reduce_sum(times(context_attention_weight, context_memory), name='C-Att')\n",
     "    query_attention = sequence.reduce_sum(times(query_attention_weight, query_memory), name='Q-Att')\n",
     "    attention = ops.splice(query_attention, context_attention, name='att-sp')\n",
-    "    status = gru(attention, status).output\n",
+    "    status = gru(status, attention).output\n",
     "    termination_prob = stop_gate(status)\n",
     "    ans_attention = ans_cos_sim(status, context_memory)\n",
     "    output[step*2] = ans_attention\n",
@@ -909,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -997,7 +943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1039,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -1090,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -1100,13 +1046,12 @@
     "  \"\"\"\n",
     "  Create adam learner\n",
     "  \"\"\"\n",
-    "  lr_schedule = learner.learning_rate_schedule(learning_rate, learner.UnitType.sample)\n",
-    "  momentum = learner.momentum_schedule(0.90)\n",
+    "  lr_schedule = learners.learning_rate_schedule(learning_rate, learner.UnitType.sample)\n",
+    "  momentum = learners.momentum_schedule(0.90)\n",
     "  gradient_clipping_threshold_per_sample = gradient_clipping_threshold_per_sample\n",
     "  gradient_clipping_with_truncation = True\n",
     "  momentum_var = learner.momentum_schedule(0.999)\n",
-    "  lr = learner.adam_sgd(learn_params, lr_schedule, momentum, True, momentum_var,\n",
-    "          low_memory = False,\n",
+    "  lr = learners.adam(learn_params, lr_schedule, momentum, True, momentum_var,\n",
     "          gradient_clipping_threshold_per_sample = gradient_clipping_threshold_per_sample,\n",
     "          gradient_clipping_with_truncation = gradient_clipping_with_truncation)\n",
     "  learner_desc = 'Alg: Adam, learning rage: {0}, momentum: {1}, gradient clip: {2}'.format(learning_rate, momentum[0], gradient_clipping_threshold_per_sample)\n",
@@ -1124,19 +1069,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from cntk.io import MinibatchSource, CTFDeserializer, StreamDef, StreamDefs, INFINITELY_REPEAT, DEFAULT_RANDOMIZATION_WINDOW\n",
-    "import cntk.ops as ops\n",
-    "from cntk.layers.blocks import _INFERRED, Parameter\n",
-    "from cntk.internal import _as_tuple, sanitize_input\n",
-    "import cntk.learner as learner\n",
-    "\n",
     "def create_reader(path, vocab_dim, entity_dim, randomize, rand_size= DEFAULT_RANDOMIZATION_WINDOW, size=INFINITELY_REPEAT):\n",
     "  \"\"\"\n",
     "  Create data reader for the model\n",
@@ -1334,7 +1272,18 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Log with log file: log/train_03-23_11.32.49.log\n",
+      "Create model: dropout_rate: 0.2, init:<cntk.cntk_py.Dictionary; proxy of <Swig Object of type 'CNTK::ImageTransform *' at 0x7fcf1b225c60> >, embedding_init: None\n",
+      "Create learner. Alg: Adam, learning rage: 0.0005, momentum: 0.9, gradient clip: 0.001\n",
+      "................................................"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
