CNTK v2 library: Several UserDefinedFunction features and bug fixes
1) Fix for Premature UDF backprop state destruction in python SWIG wrapper
(Willi and Eldar)
2) Add ability for output variable to specify that gradients are not
needed
3) Add support for letting backward implementation of a UDF be a no-op which
results in no gradients being propagated to the inputs for that UDF node
4) Change UDF bckward signature to be passed a map for filling input
gradients whevener the UDF has multiple inputs
5) Performance fix to call the UDF backward methid just once for all
inputs needing gradients instead of separate calls for each input

--- a/Tutorials/CNTK_205_Artistic_Style_Transfer.ipynb
+++ b/Tutorials/CNTK_205_Artistic_Style_Transfer.ipynb
@@ -122,7 +122,7 @@
     "    b = arrays[1]\n",
     "    k = C.constant(value=f)\n",
     "    t = C.constant(value=np.reshape(b, (-1, 1, 1)))\n",
-    "    y = C.relu(C.convolution(k, x, auto_padding=[True, True, False]) + t)\n",
+    "    y = C.relu(C.convolution(k, x, auto_padding=[False, True, True]) + t)\n",
     "    layer_map[name] = y\n",
     "    return y\n",
     "\n",
